Corrected list delete btn styling to avoid sidebar collapse problems

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -337,6 +337,7 @@ body {
 
 .list-name {
   padding-bottom: 0.1rem;
+  /* margin-right: 6rem; */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -369,7 +370,13 @@ body {
 }
 
 .list-btn {
-  display: none;
+  opacity: 0;
+  color: #202020;
+  font-size: 1.5rem;
+  font-weight: lighter;
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0.1rem;
 }
 
 /* This class can change the appearance of the button when you hover the list item (e.g. show the button) */
@@ -381,10 +388,8 @@ body {
   border: none;
   background-color: rgba(255, 255, 255, 0);
   position: absolute;
-  right: 1.2rem;
-  margin: 0;
-  padding: 0.1rem;
-  display: block;
+  left: 16rem;
+
 }
 
 .list-btn:hover {
@@ -536,8 +541,8 @@ body {
   cursor: default;
 }
 
-#hidden {
-  display: none;
+.hidden {
+  display: none !important;
 }
 
 
